# I2CDeviceDB

./: .gitignore  README.ja.md
chips/: ads1100.yaml  ads1110.yaml  ads1115.yaml  adxl345.yaml  atecc608b.yaml  bh1750.yaml  bme688.yaml  bmi270.yaml  bmm150.yaml  bmp280.yaml  dht12.yaml  eeprom.yaml  gp8413.yaml  hym8563.yaml  ina226.yaml  m5stack-mcu-u011-b.yaml  m5stack-mcu-u024-c.yaml  m5stack-mcu-u024-v2.yaml  m5stack-mcu-u035-b.yaml  m5stack-mcu-u035.yaml  m5stack-mcu-u041-b.yaml  m5stack-mcu-u041.yaml  m5stack-mcu-u097.yaml  m5stack-mcu-u105.yaml  m5stack-mcu-u108.yaml  m5stack-mcu-u120.yaml  m5stack-mcu-u133-v11.yaml  m5stack-mcu-u133.yaml  m5stack-mcu-u135.yaml  m5stack-mcu-u139.yaml  m5stack-mcu-u140.yaml  m5stack-mcu-u146.yaml  m5stack-mcu-u153.yaml  m5stack-mcu-u154.yaml  m5stack-mcu-u158.yaml  m5stack-mcu-u160-v11.yaml  m5stack-mcu-u160.yaml  m5stack-mcu-u161.yaml  m5stack-mcu-u162.yaml  m5stack-mcu-u164.yaml  (+32 more)
collection/: .env.example  README.ja.md  conftest.py  preflight.py  pyproject.toml
collection/sketches/qmp6988__characterize/: build_config.toml  qmp6988__characterize.ino  test_qmp6988_characterize.py
collection/sketches/scan/: build_config.toml  scan.ino  test_scan.py
collection/sketches/sht30__characterize/: measurement_command.h  sht30__characterize.ino  sketch.yaml  test_sht30_characterize.py
collection/unit_tests/: test_collection_model.py  test_sht30_generator_proof.py
docs/: COLLECTION.ja.md  DATA_MODEL.ja.md  SITE.ja.md  SPEC.ja.md
libraries/: adafruit-bmp280-library.yaml  m5stack-m5module-4-20ma.yaml  m5stack-m5unit-8angle.yaml  (+26 more)
(+98 files in other folders)
